--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -2,13 +2,12 @@
 {% include "header.html" %}
 
 
-<h1>New User</h1>
+<h1>Welcome to Weekly Snippets!</h1>
 
-<p>We have no records for <strong>{{username}}</strong>.  If you are a new
-  user, <a href="/settings?msg=Welcome!+Verify+the+settings+below+and+click+'Save'.&u={{username}}&redirect_to=snippet_entry">verify
-  your settings</a> and you can get started writing snippets!</p>
+<p>We haven't seen <strong>{{username}}</strong> here before (that's you). To get started, please <b><a href="/settings?msg=Welcome!+Verify+the+settings+below+and+click+'Save'.&u={{username}}&redirect_to=snippet_entry">verify
+  your settings</a></b> and you can get started writing snippets!</p>
 
-<p>Another possibility is you accidentally logged in as the wrong
+<p>Confused why you're seeing this? Perhaps you accidentally logged in as the wrong
   user.  You can <a href="{{login_url}}">switch users</a>,
   or <a href="{{logout_url}}">log out</a> and log back in
   as the correct user.</p>
