--- a/templates/settings.html
+++ b/templates/settings.html
@@ -23,9 +23,12 @@
   <input id="category" type="text" name="category" value="{{user.category}}">
 </div>
 
+{# For simplicity of onboarding, don't show these settings: the defaults are sensible. #}
+{% if not is_new_user %}
 <fieldset class="user-settings-block">
   <legend class="user-settings-label">
     Interpret snippets as <a href="http://daringfireball.net/projects/markdown/syntax">markdown</a> by default?
+    You should almost certainly pick Yes.
   </legend>
   <input id="markdown-yes" type="radio" name="markdown" value="yes"
          {% if user.uses_markdown %}checked{% endif %}>
@@ -36,7 +39,7 @@
 </fieldset>
 
 <fieldset class="user-settings-block">
-  <legend class="user-settings-label">Have snippets be private by default?:</legend>
+  <legend class="user-settings-label">Have snippets be private by default?</legend>
   <input id="private-yes" type="radio" name="private" value="yes"
          {% if user.private_snippets %}checked{% endif %}>
          <label for="private-yes">yes</label>
@@ -46,7 +49,7 @@
 </fieldset>
 
 <fieldset class="user-settings-block">
-  <legend class="user-settings-label">Receive reminder emails?:</legend>
+  <legend class="user-settings-label">Receive reminder emails?</legend>
   <input id="reminder-email-yes" type="radio" name="reminder_email" value="yes"
          {% if user.wants_email %}checked{% endif %}>
          <label for="reminder-email-yes">yes</label>
@@ -65,6 +68,7 @@
     (TODO(csilvers): this field is currently ignored)<br>
   </div>
 </div>
+{% endif %}
 
 <input type="hidden" name="redirect_to" value="{{redirect_to}}">
 
